--- a/src/main/resources/templates/fragment/common.html
+++ b/src/main/resources/templates/fragment/common.html
@@ -9,14 +9,17 @@
 
             <div class="blog-frag-header">
                 <h4 th:text="*{author.name}" class="blog-frag-author"></h4>
-                <span class="blog-frag-time small">2018年12月24日 18:00</span>
+                <span class="blog-frag-time small" th:text="${#dates.format(microblog.timestamp, 'yyyy年MM月dd日 HH:mm')}">2018年12月24日 18:00</span>
             </div>
             <div th:text="*{content}" class="blog-frag-txt-content"></div>
 
             <div class="blog-frag-media">
                 <div class="media-images">
                     <ul class="media-image-list">
-                        <li th:unless="${#lists.isEmpty(microblog.mediaFiles)}" th:each="media : ${microblog.mediaFiles}" th:style="'background-image: url(' + @{/upload/images/{id}(id=${media.id})} +  ');'"></li>
+                        <li th:unless="${#lists.isEmpty(microblog.mediaFiles)}"
+                            th:each="media : ${microblog.mediaFiles}"
+                            data-th-data-src="@{/upload/images/{id}(id=${media.id})}"
+                            th:style="'background-image: url(' + @{/upload/images/{id}(id=${media.id})} + ');'"></li>
                     </ul>
                 </div>
 
