--- a/src/main/resources/static/static/css/base.css
+++ b/src/main/resources/static/static/css/base.css
@@ -158,3 +158,25 @@ input.form-control {
     font-size: 12px;
     color: #888;
 }
+
+.icon {
+    min-width: 16px;
+    min-height: 16px;
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    vertical-align: middle;
+    line-height: inherit;
+    background: no-repeat center center;
+    -webkit-background-size: cover;
+    background-size: cover;
+    margin: 0 2px;
+}
+
+.icon.like {
+    background-image: url(../img/icon_simple_like.png);
+}
+
+.icon.like.active {
+    background-image: url(../img/icon_liked.png);
+}
