--- a/src/main/resources/templates/base/base_temp_parts.html
+++ b/src/main/resources/templates/base/base_temp_parts.html
@@ -18,7 +18,8 @@
             API_CONF: {
                 MicroBlog: {
                     MICROBLOG_BASE: [[@{/ajax/microblog}]],
-                    MICROBLOG_SPECIFIC: [[@{/ajax/microblog/{id}}]]
+                    MICROBLOG_SPECIFIC: [[@{/ajax/microblog/{id}}]],
+                    MICROBLOG_LIKE: [[@{/ajax/microblog/like}]]
                 },
                 Image: {
                     IMAGE_SPECIFIC_ID: [[@{/upload/images/{id}}]],
