--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -86,10 +86,10 @@
 
                             <div class="blog-footer">
                                 <ul class="list-inline list-divide list-stretch">
-                                    <li>收藏</li>
-                                    <li>评论</li>
-                                    <li>转载</li>
-                                    <li><i class="icon like"></i>赞</li>
+                                    <li data-id="{microBlogId}">收藏</li>
+                                    <li data-id="{microBlogId}">评论</li>
+                                    <li data-id="{microBlogId}">转载</li>
+                                    <li data-id="{microBlogId}" class="blog-control-like" data-like-count="{like_count}"><i class="icon like"></i>赞 <span class="value">{like_count}</span></li>
                                 </ul>
                             </div>
                         </div>
