--- a/src/main/resources/static/static/css/main.css
+++ b/src/main/resources/static/static/css/main.css
@@ -26,6 +26,7 @@ body.bg-gradient {
     left: 0;
     width: 100%;
     right: 0;
+    z-index: 99999;
 }
 
 #signup-plane {
@@ -156,6 +157,12 @@ body.bg-gradient {
     background-color: white;
     padding: 8px;
     margin-bottom: 10px;
+    -webkit-box-shadow: 0 0 2px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0 0 2px rgba(0,0,0,0.2);
+    box-shadow: 0 0 2px rgba(0,0,0,0.2);
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
 }
 
 .input {
@@ -225,6 +232,11 @@ body.bg-gradient {
     font-size: 17px;
     font-weight: bold;
     line-height: 1.7em;
+}
+
+.blog-frag-header > .blog-frag-author a {
+    color: black;
+    text-decoration: none;
 }
 
 .blog-frag-header > .blog-frag-time {
@@ -305,4 +317,80 @@ body.bg-gradient {
 .media-images .single ~ * {
     display: none;
     visibility: hidden;
+}
+
+.avatar {
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    overflow: hidden;
+    background: url(../img/default_avatar.png) no-repeat center center;
+    -webkit-background-size: cover;
+    background-size: cover;
+}
+
+.avatar.big {
+    width: 100px;
+    height: 100px;
+    background-color: white;
+}
+
+.user-avatar {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    left: 50%;
+    margin-left: -50px;
+    margin-top: 80px;
+}
+
+#banner {
+    width: 100%;
+    height: 300px;
+    position: relative;
+}
+
+.blog-avatar-wrap {
+    margin: 3px 10px;
+    float: left;
+    width: 50px;
+    height: 50px;
+}
+
+#c_left-user_info {
+    width: 470px;
+    margin: 15px 10px 0 0;
+}
+
+#banner {
+    background: url(../img/user-banner.jpg) no-repeat center center;
+    -webkit-background-size: cover;
+    background-size: cover;
+    width: 100%;
+    height: 300px;
+    margin-top: 30px;
+}
+
+#user-overview {
+    padding: 14px 0;
+}
+
+@media screen and (max-width: 900px){
+    
+    #c_left-user_info,
+    #c_left-menu {
+        display: none;
+        visibility: hidden;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+
+    .wb_main_r {
+        display: none;
+        visibility: hidden;
+    }
 }
