--- a/src/main/resources/static/static/css/main.css
+++ b/src/main/resources/static/static/css/main.css
@@ -341,16 +341,14 @@ body.bg-gradient {
 .user-avatar {
     width: 100px;
     height: 100px;
-    position: absolute;
-    left: 50%;
-    margin-left: -50px;
-    margin-top: 80px;
+    margin: 70px auto 6px;
 }
 
 #banner {
     width: 100%;
     height: 300px;
-    position: relative;
+    text-align: center;
+    padding: 1px;
 }
 
 .blog-avatar-wrap {
@@ -362,7 +360,15 @@ body.bg-gradient {
 
 #c_left-user_info {
     width: 470px;
-    margin: 15px 10px 0 0;
+    margin: 15px 10px 0 10px;
+}
+
+#banner-username {
+    font-size: 24px;
+    color: #fff;
+    text-shadow: 0 0 6px #555;
+    line-height: 1.5em;
+    font-weight: bold;
 }
 
 #banner {
@@ -379,7 +385,7 @@ body.bg-gradient {
 }
 
 @media screen and (max-width: 900px){
-    
+
     #c_left-user_info,
     #c_left-menu {
         display: none;
