--- a/src/main/resources/templates/userpage.html
+++ b/src/main/resources/templates/userpage.html
@@ -22,18 +22,19 @@
 
     <div class="container">
 
-        <div id="banner" style="width: 100%; height: 300px;">
+        <div id="banner">
 
             <div class="user-avatar">
                 <div class="avatar big"></div>
             </div>
 
-            <div class="user-name" th:text="${user.name}"></div>
+            <div class="user-name">
+                <h2 th:text="${user.name}" id="banner-username"></h2>
+            </div>
 
             <div class="user-control">
-                <ul class="list-inline">
+                <ul class="list-inline list-center">
                     <li><button class="btn primary" type="button">关注</button></li>
-                    <li><button class="btn primary" type="button">test</button></li>
                 </ul>
             </div>
 
