--- a/src/main/resources/templates/userpage.html
+++ b/src/main/resources/templates/userpage.html
@@ -48,15 +48,15 @@
                     <ul id="user-overview" class="list-inline list-divide list-stretch">
                         <li>
                             <h4>关注</h4>
-                            <span>1</span>
+                            <span class="text-small">1</span>
                         </li>
                         <li>
                             <h4>粉丝</h4>
-                            <span>234</span>
+                            <span class="text-small">234</span>
                         </li>
                         <li>
                             <h4>微博</h4>
-                            <span>423</span>
+                            <span class="text-small">423</span>
                         </li>
                     </ul>
                 </div>
