--- a/src/main/resources/static/static/css/main.css
+++ b/src/main/resources/static/static/css/main.css
@@ -26,7 +26,7 @@ body.bg-gradient {
     left: 0;
     width: 100%;
     right: 0;
-    z-index: 99999;
+    z-index: 999;
 }
 
 #signup-plane {
@@ -344,6 +344,23 @@ body.bg-gradient {
     margin: 70px auto 6px;
 }
 
+.user-avatar > .avatar {
+    -webkit-box-shadow: 0 0 1px 4px rgba(255,255,255,0.6);
+    -moz-box-shadow: 0 0 1px 4px rgba(255,255,255,0.6);
+    box-shadow: 0 0 1px 4px rgba(255,255,255,0.6);
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+}
+
+.user-avatar > .avatar:hover {
+    -webkit-box-shadow: 0 0 2px 6px rgba(255,255,255,0.8);
+    -moz-box-shadow: 0 0 2px 6px rgba(255,255,255,0.8);
+    box-shadow: 0 0 2px 6px rgba(255,255,255,0.8);
+}
+
 #banner {
     width: 100%;
     height: 300px;
@@ -399,4 +416,10 @@ body.bg-gradient {
         display: none;
         visibility: hidden;
     }
+}
+
+.blog-opera-remove {
+    float: right;
+    margin: 6px;
+    cursor: pointer;
 }
