require增加config方法, 可设置baseUrl

--- a/src/main/resources/templates/forms.html
+++ b/src/main/resources/templates/forms.html
@@ -22,7 +22,7 @@
     </form>
 
     <script>
-        require(["static/js/form", "static/js/ajax"], function (Form, ajax) {
+        require(["lib/form", "lib/ajax"], function (Form, ajax) {
 
             Form.onFieldError = function (dom, value, message) {
                 al(message);
@@ -102,7 +102,7 @@
     </form>
 
     <script>
-        require(["static/js/form", "static/js/ajax"], function (Form, ajax) {
+        require(["lib/form", "lib/ajax"], function (Form, ajax) {
 
             Form.onFieldError = function (dom, value, message) {
                 al(message);
