--- a/src/main/resources/templates/base/base_temp_parts.html
+++ b/src/main/resources/templates/base/base_temp_parts.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" th:href="@{/static/css/base.css}">
     <link rel="stylesheet" th:href="@{/static/css/main.css}">
     <link rel="stylesheet" th:href="@{/static/css/alert.css}">
-    <script th:src="@{/static/js/alert.js}"></script>
+    <script th:src="@{/static/js/lib/alert.js}"></script>
     <script th:src="@{/static/js/common.js}"></script>
-    <script th:src="@{/static/js/require.js}"></script>
+    <script th:src="@{/static/js/lib/require.js}"></script>
     <link th:replace="${tags}">
 
     <script th:inline="javascript">
@@ -29,6 +29,9 @@
         };
         window._current_user = [[${session._current_logged_in_user}]];
         +]*/
+        require.config({
+            baseUrl: /*[[ @{/static/js/} ]]*/ "/static/js/"
+        });
     </script>
 
 </head>
