--- a/src/main/resources/templates/base/base_temp_parts.html
+++ b/src/main/resources/templates/base/base_temp_parts.html
@@ -21,6 +21,9 @@
                     MICROBLOG_SPECIFIC: [[@{/ajax/microblog/{id}}]],
                     MICROBLOG_LIKE: [[@{/ajax/microblog/like}]]
                 },
+                Comment: {
+                    COMMENT_BASE: [[@{/ajax/microblog/{mid}/comment}]]
+                },
                 Image: {
                     IMAGE_SPECIFIC_ID: [[@{/upload/images/{id}}]],
                     IMAGE_UPLOAD: [[@{/image/upload}]]
