图片拖拽调整顺序

--- a/src/main/resources/static/static/css/base.css
+++ b/src/main/resources/static/static/css/base.css
@@ -145,6 +145,11 @@ input.form-control {
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
+    cursor: pointer;
+}
+
+.btn.disable {
+    cursor: default;
 }
 
 .btn:hover {
