--- a/src/main/resources/static/static/css/main.css
+++ b/src/main/resources/static/static/css/main.css
@@ -20,9 +20,9 @@ body.bg-gradient {
 
 #header {
     background: rgba(255, 255, 255, 0.98);
-    -webkit-box-shadow: 0 0 2px rgba(0,0,0,0.2);
-    -moz-box-shadow: 0 0 2px rgba(0,0,0,0.2);
-    box-shadow: 0 0 2px rgba(0,0,0,0.2);
+    -webkit-box-shadow: 0 0 12px 1px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0 0 12px 1px rgba(0,0,0,0.2);
+    box-shadow: 0 0 12px 1px rgba(0,0,0,0.2);
     height: 46px;
     position: fixed;
     top: 0;
@@ -294,7 +294,7 @@ body.bg-gradient {
     margin-top: 10px;
 }
 
-.media-images > ul {
+.media-images > .media-image-list {
     width: 100%;
     /*background-color: red;*/
     display: flex;
@@ -302,7 +302,7 @@ body.bg-gradient {
     flex-wrap: wrap;
 }
 
-.media-images > ul > li {
+.media-images > .media-image-list > * {
     width: 110px;
     height: 110px;
     margin: 2px;
@@ -310,6 +310,7 @@ body.bg-gradient {
     background: no-repeat center center;
     -webkit-background-size: cover;
     background-size: cover;
+    display: inline-block;
 }
 
 .media-images .single {
@@ -469,4 +470,12 @@ body.bg-gradient {
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     border-radius: 0;
+}
+
+#upload-images-drag {
+    margin: auto;
+}
+
+#upload-images-drag > .media-image-list > * {
+    cursor: all-scroll;
 }
